--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "version": "3.7.1"
   },
   "scripts": {
-    "start": "hexo generate -w -f | hexo serve",
-    "deploy": "hexo clean && hexo deploy"
+    "start": "npx hexo generate -w -f | hexo serve",
+    "deploy": "npx hexo clean && hexo deploy"
   },
   "dependencies": {
     "hexo": "^3.2.0",
@@ -22,5 +22,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
+  },
+  "devDependencies": {
+    "hexo-cli": "^1.1.0"
   }
 }
